S3 product image upload+fetch services updated